<resources>
    <string name="app_name">RTLS Client App</string>
    <string name="btnStartTxt">Start</string>
    <string name="btnStopTxt">Stop</string>
    <string name="settings">Current Settings</string>
    <string name="settings_regions">Regions</string>
    <string name="settings_recoonly">RECO Only</string>
    <string name="settings_discontinouos">Discontinuous Scan</string>
    <string name="settings_backgroundtimeout">Background Ranging Timeout</string>
    <string name="settings_result_true">True</string>
    <string name="settings_result_false">False</string>

    <string name="background_monitoring">Background Monitoring</string>
    <string name="background_ranging">Background Ranging</string>

    <string name="start_monitoring">Start Monitoring</string>
    <string name="start_ranging">Start Ranging</string>

    <string name="temp">xxxxx</string>
    <string name="major_label">Major: </string>
    <string name="minor_label">Minor: </string>
    <string name="tx_label">Tx: </string>
    <string name="rssi_label">RSSI: </string>
    <string name="battery_label">Battery: </string>
    <string name="proximity_label">Proximity: </string>
    <string name="accuracy_label">meter(s)</string>
    <string name="millivolt">mV</string>
    <string name="info_label">Location: </string>
    <string name="infopatient_label">Name: </string>

    <string name="location_permission_granted">Location permission has been granted. RTLS client can now work properly.</string>
    <string name="location_permission_not_granted">Location permission for this application is denied. RTLS client may not work properly.</string>
    <string name="location_permission_rationale">Location permission is needed to monitor or range beacons.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logTxt">Start logging..</string>
</resources>
