<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.justudin.rtlsclient.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:id="@+id/mainLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="38dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="47dp"
                tools:layout_editor_absoluteY="40dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/inputName"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="51dp"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="47dp"
                android:background="@android:color/holo_blue_light"
                android:onClick="onBtnClickAct"
                android:text="@string/btnStartTxt" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/btnStart"
                android:layout_marginBottom="64dp"
                android:background="@android:color/holo_red_light"
                android:enabled="false"
                android:onClick="onBtnClickAct"
                android:text="@string/btnStopTxt"
                android:visibility="gone" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="CODE001" />

        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
